--- a/css/theme/source/zuehlke.scss
+++ b/css/theme/source/zuehlke.scss
@@ -49,7 +49,7 @@ $selectionBackgroundColor: rgba(0, 0, 0, 0.99);
 .reveal {
   .deck-slide {
     &.slide-background {
-      background: url("../../img/bg.jpg"), center, center;
+      background: url("../../../img/bg.jpg"), center, center;
       background-size: cover;
     }
 
