--- a/lib/css/atom-one-dark.css
+++ b/lib/css/atom-one-dark.css
@@ -18,7 +18,7 @@ hue-6-2: #e6c07b
 
 */
 
-.hljs {
+.kotlin {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
@@ -26,71 +26,71 @@ hue-6-2: #e6c07b
     background: #282c34;
 }
 
-.hljs-comment,
-.hljs-quote {
+.kotlin-comment,
+.kotlin-quote {
     color: #5c6370;
     font-style: italic;
 }
 
-.hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
+.kotlin-doctag,
+.kotlin-keyword,
+.kotlin-formula {
     color: #c678dd;
 }
 
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-deletion,
-.hljs-subst {
+.kotlin-section,
+.kotlin-name,
+.kotlin-selector-tag,
+.kotlin-deletion,
+.kotlin-subst {
     color: #e06c75;
 }
 
-.hljs-literal {
+.kotlin-literal {
     color: #56b6c2;
 }
 
-.hljs-string,
-.hljs-regexp,
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta-string {
+.kotlin-string,
+.kotlin-regexp,
+.kotlin-addition,
+.kotlin-attribute,
+.kotlin-meta-string {
     color: #98c379;
 }
 
-.hljs-built_in,
-.hljs-class .hljs-title {
+.kotlin-built_in,
+.kotlin-class .kotlin-title {
     color: #e6c07b;
 }
 
-.hljs-attr,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-type,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
+.kotlin-attr,
+.kotlin-variable,
+.kotlin-template-variable,
+.kotlin-type,
+.kotlin-selector-class,
+.kotlin-selector-attr,
+.kotlin-selector-pseudo,
+.kotlin-number {
     color: #d19a66;
 }
 
-.hljs-symbol,
-.hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-title {
+.kotlin-symbol,
+.kotlin-bullet,
+.kotlin-link,
+.kotlin-meta,
+.kotlin-selector-id,
+.kotlin-title {
     color: #61aeee;
 }
 
-.hljs-emphasis {
+.kotlin-emphasis {
     font-style: italic;
 }
 
-.hljs-strong {
+.kotlin-strong {
     font-weight: bold;
 }
 
-.hljs-link {
+.kotlin-link {
     text-decoration: underline;
 }
