--- a/css/theme/zuehlke.css
+++ b/css/theme/zuehlke.css
@@ -15,7 +15,7 @@
     border-radius: 15px; /* Adjust for rounder or less round corners */
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.8); /* Optional shadow */
 
-    /* New properties for full height and width */
+    /* Ensure proper sizing */
     max-width: 100vw; /* Maximum width of the viewport */
     max-height: 100vh; /* Maximum height of the viewport */
     overflow: auto; /* Add scrollable bar if content is too large */
@@ -29,13 +29,14 @@
     position: relative; /* Allow absolute positioning of inner content if needed */
 }
 
-/* Optional: You can set a minimum height for better visibility */
-.white > h3 {
+/* Optional: Set min height for better visibility */
+.white > h2 {
     margin-top: 0; /* Prevent extra space at the top */
 }
 
 .white > pre {
     margin: 0; /* Prevent extra space around pre elements */
+    overflow: auto; /* Ensure that pre elements can scroll if necessary */
 }
 
 .reveal .deck-slide.slide-background {
@@ -748,4 +749,30 @@ body {
     -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
     -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
     transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+}
+
+.reveal pre {
+    display: block;
+    position: relative;
+    width: 90%;
+    max-height: 400px; /* Adjust the height as needed */
+    margin: 20px auto;
+    text-align: left;
+    font-size: 0.55em;
+    font-family: monospace;
+    line-height: 1.2em;
+    word-wrap: break-word;
+    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-x: auto; /* Enable horizontal scrolling */
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+    background: rgba(255, 255, 255, 0.0); /* Optional background color for contrast */
+    border-radius: 5px; /* Optional rounding for aesthetics */
+    padding: 10px; /* Padding for better readability */
+}
+
+.reveal pre code {
+    display: block;
+    padding: 5px;
+    word-wrap: normal; /* Prevent wrapping of code lines */
+    overflow: auto; /* Ensure content is scrollable */
 }
